--- a/spellchecker_DE.ipynb
+++ b/spellchecker_DE.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "creating directory '/home/vagrant/.local/share/jupyter/nbextensions/spellchecker/typo/dictionaries'\n",
       "saving 'https://chromium.googlesource.com/chromium/deps/hunspell_dictionaries/+/master/de_DE.dic?format=TEXT'\n",
       "    to '/home/vagrant/.local/share/jupyter/nbextensions/spellchecker/typo/dictionaries/de_DE.dic'\n",
       "saving 'https://chromium.googlesource.com/chromium/deps/hunspell_dictionaries/+/master/de_DE.aff?format=TEXT'\n",
@@ -19,14 +20,13 @@
      "data": {
       "text/plain": [
        "{'load_extensions': {'contrib_nbextensions_help_item/main': True,\n",
-       "  'nbextensions_configurator/config_menu/main': True,\n",
-       "  'spellchecker/main': True},\n",
+       "  'nbextensions_configurator/config_menu/main': True},\n",
        " 'spellchecker': {'aff_url': './typo/dictionaries/de_DE.aff',\n",
        "  'dic_url': './typo/dictionaries/de_DE.dic',\n",
        "  'lang_code': 'de_DE'}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
