Add RAID hands on

--- a/spellchecker_DE.ipynb
+++ b/spellchecker_DE.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-12T15:25:44.821640Z",
+     "start_time": "2018-03-12T15:25:42.501993Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -19,8 +24,35 @@
     {
      "data": {
       "text/plain": [
-       "{'load_extensions': {'contrib_nbextensions_help_item/main': True,\n",
-       "  'nbextensions_configurator/config_menu/main': True},\n",
+       "{'load_extensions': {'codefolding/main': True,\n",
+       "  'contrib_nbextensions_help_item/main': True,\n",
+       "  'datestamper/main': True,\n",
+       "  'execute_time/ExecuteTime': True,\n",
+       "  'export_embedded/main': True,\n",
+       "  'freeze/main': True,\n",
+       "  'gist_it/main': True,\n",
+       "  'help_panel/help_panel': True,\n",
+       "  'highlight_selected_word/main': True,\n",
+       "  'highlighter/highlighter': True,\n",
+       "  'hinterland/hinterland': True,\n",
+       "  'init_cell/main': True,\n",
+       "  'livemdpreview/livemdpreview': True,\n",
+       "  'move_selected_cells/main': True,\n",
+       "  'nbextensions_configurator/config_menu/main': True,\n",
+       "  'printview/main': True,\n",
+       "  'python-markdown/main': True,\n",
+       "  'rubberband/main': True,\n",
+       "  'ruler/main': True,\n",
+       "  'runtools/main': True,\n",
+       "  'scratchpad/main': True,\n",
+       "  'snippets/main': True,\n",
+       "  'snippets_menu/main': True,\n",
+       "  'spellchecker/main': True,\n",
+       "  'splitcell/splitcell': True,\n",
+       "  'table_beautifier/main': True,\n",
+       "  'toc2/main': True,\n",
+       "  'tree-filter/index': True,\n",
+       "  'varInspector/main': True},\n",
        " 'spellchecker': {'aff_url': './typo/dictionaries/de_DE.aff',\n",
        "  'dic_url': './typo/dictionaries/de_DE.dic',\n",
        "  'lang_code': 'de_DE'}}"
@@ -98,6 +130,47 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
